contract-chameleon.lang.contract_lib.tools/src/test/resources/ast/errors/abstractions/TyposKeyword.clib
;typo in keyword
(declare-abstractios
  (
    (TestSortA 0)
  )
  (
    ((testConsA))
  )
)

;valid abstraction
(declare-abstractions
  (
    (TestSortA 0)
  )
  (
    ((testConsA))
  )
)
